[package]
name = "review-protocol"
version = "0.8.1"
edition = "2021"

[features]
client = [
  "async-trait",
  "bincode",
  "oinq",
  "quinn",
  "rustls",
  "rustls-pemfile",
  "semver",
  "thiserror",
]
server = [
  "async-trait",
  "anyhow",
  "bincode",
  "oinq",
  "quinn",
  "semver",
  "thiserror",
]

[dependencies]
anyhow = { version = "1", optional = true }
async-trait = { version = "0.1", optional = true }
bincode = { version = "1", optional = true }
ipnet = { version = "2", features = ["serde"] }
num_enum = { version = "0.7" }
oinq = { git = "https://github.com/petabi/oinq.git", tag = "0.13.0", optional = true }
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", default-features = false, optional = true }
rustls-pemfile = { version = "2", optional = true }
semver = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1.19"
thiserror = { version = "1", optional = true }

[dev-dependencies]
quinn = { version = "0.11", features = ["ring"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
] }
tokio = { version = "1", features = ["macros", "rt"] }

[lints.clippy]
pedantic = "warn"
