[package]
name = "review-protocol"
version = "0.12.1"
edition = "2024"

[features]
client = [
  "async-trait",
  "bincode",
  "oinq",
  "quinn",
  "rustls",
  "rustls-pemfile",
  "semver",
  "thiserror",
]
server = [
  "async-trait",
  "anyhow",
  "bincode",
  "oinq",
  "quinn",
  "semver",
  "thiserror",
]

[dependencies]
anyhow = { version = "1", optional = true }
async-trait = { version = "0.1", optional = true }
bincode = { version = "1", optional = true }
chrono = { version = ">=0.4.35,<0.4.40", default-features = false, features = [
  "serde",
] }
ipnet = { version = "2", features = ["serde"] }
num_enum = { version = "0.7" }
oinq = { git = "https://github.com/petabi/oinq.git", tag = "0.13.0", optional = true }
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", default-features = false, optional = true }
rustls-pemfile = { version = "2", optional = true }
semver = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.19"
serde_repr = "0.1.19"
structured = "0.15.0"
thiserror = { version = "2", optional = true }

[dev-dependencies]
quinn = { version = "0.11", features = ["ring"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
] }
tokio = { version = "1", features = ["macros", "rt"] }

# Not directly used by review-protocol, but added to avoid rcgen using time-0.3.40.
# time-0.3.40 causes the following clippy error:
# https://github.com/petabi/review-protocol/actions/runs/14022787817/job/39256916777
[dev-dependencies.time]
version = "=0.3.39"
default-features = false

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
