[package]
name = "review-protocol"
version = "0.14.0"
edition = "2024"

[features]
client = [
  "async-trait",
  "bincode",
  "oinq",
  "quinn",
  "rustls",
  "rustls-pemfile",
  "semver",
  "thiserror",
]
server = [
  "async-trait",
  "anyhow",
  "bincode",
  "oinq",
  "quinn",
  "semver",
  "thiserror",
  "tokio",
]
tokio = ["dep:tokio"]
test-support = ["client", "server", "rcgen", "tokio/rt-multi-thread"]
rcgen = ["dep:rcgen"]

[dependencies]
anyhow = { version = "1", optional = true }
async-trait = { version = "0.1", optional = true }
bincode = { version = "2", features = ["serde"], optional = true }
ipnet = { version = "2", features = ["serde"] }
jiff = { version = "0.2.15", features = ["serde"] }
num_enum = { version = "0.7" }
oinq = { git = "https://github.com/petabi/oinq.git", tag = "0.13.1", optional = true }
quinn = { version = "0.11", optional = true }
rcgen = { version = "0.13", optional = true }
rustls = { version = "0.23", default-features = false, optional = true }
rustls-pemfile = { version = "2", optional = true }
semver = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.19"
serde_repr = "0.1.19"
structured = "0.16.0"
thiserror = { version = "2", optional = true }
tokio = { version = "1", features = ["sync"], optional = true }

[dev-dependencies]
criterion = "0.7.0"
quinn = { version = "0.11", features = ["ring"] }
rcgen = "0.14"
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
] }
tokio = { version = "1", features = ["macros", "rt"] }
tokio-test = "0.4.4"

[[bench]]
name = "unidirectional_streams"
harness = false
required-features = ["test-support"]

[[example]]
name = "event_handler"
required-features = ["test-support"]

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
